<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_TCPIP_RequescCommand" Id="{6b001fe9-8b45-4858-90d7-8c34911124cd}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_TCPIP_RequescCommand :
(
	NONE,					(* No request to send *)
	SetRunMode,				(* Set run mode, 0 - Normal, 1 - Raw, 2 - Test *)
	SetAcq,					(* Set acquisition mode, 0 - Stop acq, 1 - Start acq *)
	GetUserCur,
	HeartbeatCheck,		
	SetAquisitonModeON,
	SetAquisitionModeOFF,
	WrongReply	
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>