<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_TCPIP_SEND_STATE" Id="{b7d4b865-5169-4c40-b29d-668172cd65b8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_TCPIP_SEND_STATE :
(
	WAITING,
	SEND,
	RECEIVE,
	DONE,
	CONN_RESET,
	HEARTBEAT_CHECK
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>